--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,9 @@
     android:layout_height="match_parent"
     tools:context="hikvision.zhanyun.com.hikvision.MainActivity">
 
-    <Button
-        android:id="@+id/button"
+    <ImageView
+        android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="btnTest"
-        android:text="Button" />
+        />
 </android.support.constraint.ConstraintLayout>
